2015-06-24 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/GSCharacter.h,
	* Headers/CoreFoundation/GSUnicode.h,
	* Source/GSUnicode.c: Introduce new Unicode conversion functions.
	* Source/GSUnicode.h: Replaced by public GSUnicode.h header.
	* Source/CFString.c,
	* Source/CFURL.c: Modify code to use new conversion functions.
	* Source/CFNumberFormatter.c: Fix bug exposed by new Unicode functions.

2015-06-23 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFBundle.m,
	* Source/NSCFData.m,
	* Source/NSCFError.m,
	* Source/NSCFLocale.m,
	* Source/NSCFString.m: Cast between NS and CF types to avoid compiler
	warnings.

2015-03-13 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/CFBase.h.in,
	* Headers/CoreFoundation/CFError.h: Do not define CF types as Objective C
	objects.

2015-02-20 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFRuntime.c: Do nothing if CFRetain/CFRelease are
	called on small objects.
	* Source/GSObjCRuntime.h: Cast to unsigned int to avoid warning.

2015-02-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/GSObjCRuntime.h: Check for small objects.

2015-02-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/CFArray.h,
	* Headers/CoreFoundation/CFBag.h,
	* Headers/CoreFoundation/CFData.h,
	* Headers/CoreFoundation/CFDate.h,
	* Headers/CoreFoundation/CFDictionary.h,
	* Headers/CoreFoundation/CFSet.h,
	* Headers/CoreFoundation/CFURL.h: Do not define CF types as Objective C
	objects.
	* Headers/CoreFoundation/GSCharacter.h: Fix bug in UTF-8 conversion
	function.
	* Source/NSCFArray.m,
	* Source/NSCFData.m,
	* Source/NSCFError.m: Explicitly cast NS to CF objects.

2015-02-16 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/NSCFDictionary.m: Add category to match class definition.
	* Source/NSCFType.m: Use correct number of classes to register.

2015-02-14 Stefan Bidigaray <stefanbidi@gmail.com>
	* Headers/CoreFoundation/GSCharacter.h: Fix minor compare bug.
