@@ -495,7 +495,7 @@ CFInitialize (void)
   CFCalendarInitialize ();
   CFCharacterSetInitialize ();
   CFDataInitialize ();
-//  CFBundleInitialize ();
+  CFBundleInitialize ();
   CFDateInitialize ();
   CFDateFormatterInitialize ();
   CFDictionaryInitialize ();
